Easier administration
